# odoo-mcp

./: .env.example  .gitignore  README.md  package.json  pyproject.toml  serverless.yml
.cursor/skills/odoo-domain-builder/: SKILL.md
.github/workflows/: main.yml
app/: __main__.py  config.py  lambda_handler.py
app/cli/: auth_key.py  shop_key.py
app/clients/: __init__.py  odoo_json2.py
app/prompts/: __init__.py  admin_assistant.py  hello_assistant.py  sales_order_assistant.py
app/resources/: __init__.py  catalog.py  customers.py  hello.py
app/server/: __init__.py  app_key_middleware.py  app_state.py  instructions.py  middleware.py  server.py  shop_key_middleware.py
app/services/: __init__.py  cart_session.py  catalog.py  customers.py  hello.py  orders.py
app/services/cart/: __init__.py  base.py  dynamodb.py  factory.py  helpers.py  memory.py
app/tools/: __init__.py  cart.py  hello.py  orders.py
app/tools/tool_resources/: __init__.py  _common.py  catalog.py  customers.py  hello.py
app/utils/: app_key_codec.py  exceptions.py  object_response.py  odoo_domain.py  odoo_json2_errors.py  shop_key_codec.py
dev/: mcp-inspector.config.json
tests/: test_app_key_codec.py  test_app_key_middleware.py  test_cart_helpers.py  test_cart_memory.py  test_cart_tools.py  test_catalog_service.py  test_create_order_tool.py  test_customers_service.py  test_hello_service.py  test_object_response.py  test_odoo_domain.py  test_odoo_json2_client.py  test_orders_service.py  test_shop_key_codec.py  test_shop_key_middleware.py
