[project]
name = "admin-mcp"
version = "0.1.0"
description = "MCP server scaffold for Odoo admin operations (FastMCP + Streamable HTTP)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.3.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
admin-mcp = "app.__main__:main"
admin-mcp-auth-key = "app.cli.auth_key:main"

[project.optional-dependencies]
lambda = ["mangum>=0.19.0"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
